data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4043.wast
;; 2. **Test 2: Insufficient Stack Operands**:    Construct a scenario where the `call_indirect` instruction is given fewer operands on the stack than the callee function expects. Check if the implementations trap and handle the stack underflow correctly.

(assert_invalid
  (module
    (type (func (param i32 i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $callee)
    (func $callee (param i32 i32) (result i32) (i32.add (local.get 0) (local.get 1)))
    (func $test
      (call_indirect (type 0) (i32.const 0) (i32.const 0))
    )
  )
  "type mismatch"
)